# CPRNN

./: .gitignore  pyproject.toml
cprnn/: __init__.py  data.py  model.py  utils.py
moose_app/: .gitignore  Makefile  README.md  run_tests  testroot
moose_app/doc/: config.yml  sqa_reports.yml
moose_app/doc/content/: index.md
moose_app/examples/: cprnn_stress.i
moose_app/include/base/: MooseAppApp.h
moose_app/include/materials/: ComputeFiniteStrainRNNStress.h
moose_app/src/: main.C
moose_app/src/base/: MooseAppApp.C
moose_app/src/materials/: ComputeFiniteStrainRNNStress.C
moose_app/test/include/base/: MooseAppTestApp.h
moose_app/test/src/base/: MooseAppTestApp.C
moose_app/unit/: Makefile  run_tests
moose_app/unit/src/: main.C
scripts/: train.py
